--- a/23-Ajax/07-movie_rank.html
+++ b/23-Ajax/07-movie_rank.html
@@ -103,3 +103,17 @@
     </script>
 </body>
 </html>
+
+
+
+
+
+<li>
+    <a href="">
+        <img src="img/noimage.jpg" />
+        <div class="content_box">
+            <div class="title"></div>
+            <div class="desc"></div>
+        </div>
+    </a>
+</li> 
